# metaflow-event-blueprints

./: .eslintrc.json  .gitattributes  .gitignore  .npmignore  .npmrc  .projenrc.ts  package.json  pnpm-lock.yaml  tsconfig.dev.json
.husky/: pre-commit
.projen/: deps.json  files.json  tasks.json
projenrc/: husky.ts
src/: constants.ts  index.ts  metaflow-provider.ts
src/lambda/: index.ts  resolve-python-layers.ts
src/lambda/layers/metaflow/: pyproject.toml
src/lambda/layers/outerbounds/: pyproject.toml
src/lambda/metaflow-executor/: api.py  config.py  index.py  observability.py
test/: metaflow-provider.integ.ts  metaflow-provider.test.ts  snapshot.test.ts
test/__snapshots__/: metaflow-provider.test.ts.snap  snapshot.test.ts.snap
test/metaflow-provider.integ.snapshot/: test.assets.json  test.template.json
