[tool.poetry]
name = "metaflow_layer"
version = "0.1.0"
description = ""
authors = ["Bryan Galvin <bcgalvin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12, <3.13"
metaflow = "^2.15.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
